Fixed Search-Client and View Client to use non-editable input fields. Note: Still need to add edit buttons

--- a/CRM/views/entry-client.ejs
+++ b/CRM/views/entry-client.ejs
@@ -72,7 +72,7 @@
             </div>
             <div class="col-auto">
               <textarea class="form-control" id="clientAddress2" name="clientAddress2" placeholder="Company Address 2 (if applicable)" rows="3"></textarea>
-                <select class="form-control" id="clientAddress2Type" name="clientAddress2Type" required>
+                <select class="form-control" id="clientAddress2Type" name="clientAddress2Type">
                   <option></option>
                   <option>Contact Address</option>
                   <option>Delivery Address</option>
@@ -80,7 +80,7 @@
       			</div>
       			<div class="col-auto">
       			  <textarea class="form-control" id="clientAddress3" name="clientAddress3" placeholder="Company Address 3 (if applicable)" rows="3"></textarea>
-                <select class="form-control" id="clientAddress3Type" name="clientAddress3Type" required>
+                <select class="form-control" id="clientAddress3Type" name="clientAddress3Type">
                   <option></option>
                   <option>Contact Address</option>
                   <option>Delivery Address</option>
@@ -88,7 +88,7 @@
       			</div>
             <div class="col-auto">
       			  <textarea class="form-control" id="clientAddress4" name="clientAddress4" placeholder="Company Address 4 (if applicable)" rows="3"></textarea>
-                <select class="form-control" id="clientAddress4Type" name="clientAddress4Type" required>
+                <select class="form-control" id="clientAddress4Type" name="clientAddress4Type">
                   <option></option>
                   <option>Contact Address</option>
                   <option>Delivery Address</option>
