--- a/CRM/views/result-contact-history-report.ejs
+++ b/CRM/views/result-contact-history-report.ejs
@@ -70,9 +70,14 @@
 <!-- Submit Button to execute -->
         <div class="form-row">
           <div class="form-group col">
-            <button type="button" class="btn btn-primary">Back</button>
+            <button type="button" class="btn btn-primary" onclick="goBack()">Back</button>
           </div>
         </div>
+        <script>
+          function goBack() {
+            window.history.back();
+          }
+        </script>
 
       </div>
     </div>
